# Laba1

./: CMakeLists.txt  contentwindow.cpp  contentwindow.h  historywidget.cpp  historywidget.h  infodialog.cpp  infodialog.h  loghandler.cpp  loghandler.h  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  secondwindow.cpp  secondwindow.h
